--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,36 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>CodeSpotlight | Open Source Internship Program</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body class="mat-typography">
-  <app-root></app-root>
-</body>
+
+  <head>
+    <meta charset="utf-8">
+    <title>CodeSpotlight | The Open Source Internship</title>
+    <base href="/">
+    <!-- Meta Tags for SEO -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+      content="CodeSpotlight - The Open Source Internship Program! A unique opportunity to gain real-world open-source experience, earn recognition with certificates, and join a global community of contributors.">
+    <meta name="keywords"
+      content="CodeSpotlight, open source, internship program, open source internship, open source projects, coding internships, certificates for contributions, unique internship program, contributor recognition, developer internship, real-world programming experience">
+    <meta name="author" content="CodeSpotlight">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph Meta Tags (for Social Networks) -->
+    <meta property="og:title" content="CodeSpotlight | The Open Source Internship Program">
+    <meta property="og:description"
+      content="CodeSpotlight offers a unique open source internship program that combines coding with real-world experience. Earn certificates and recognition through contributions!">
+    <meta property="og:image" content="images/codespotlight-logo-narrow.jpg"> <!-- Add your logo or image here -->
+    <meta property="og:url" content="https://codespotlight.dev">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
+
+  <body class="mat-typography">
+    <app-root></app-root>
+  </body>
+
 </html>
